--- a/style.css
+++ b/style.css
@@ -32,3 +32,24 @@ display: block;
 .nav-bar a:hover {
   color: #f26a2e;
 }
+
+.hero-section{
+    display: flex;
+    align-items: center;
+    margin: 80px auto;
+    max-width: 1100px;
+
+}
+.hero-container{
+    width: 50%;
+}
+.hero-container h1{
+    font-size: 45px;
+    
+
+}
+.hero-image {
+width: 50%;
+text-align: right;
+}
+
