--- a/style.css
+++ b/style.css
@@ -21,12 +21,13 @@ display: block;
     
     align-items: center;
     text-decoration: none;
-    color: #000000;
+    color: #302e2e;
     font-size: 20px;
     margin-left: 20px;
+    
 }
-.menu a , .active {
-    color: #333;
+.menu a, .active {
+    color: #222020;
     font-weight: bold;
 }
 .nav-bar a:hover {
@@ -44,9 +45,14 @@ display: block;
     width: 50%;
 }
 .hero-container h1{
-    font-size: 45px;
-    
+    font-size: 45px; 
 
+}
+.hero-container .black {
+color: #000;
+}
+.hero-container .orange {
+color: #ff6a00;
 }
 .hero-image {
 width: 50%;
