--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+
 body {
     background-color: #f6f8fb;
+
 }
 .nav-bar{
     display: flex;
@@ -59,16 +61,12 @@ width: 50%;
 text-align: right;
 }
 
-.plant {
+.plant-container{
 max-width: 1100px;
-margin: 60px auto;
+margin: 80px auto;
 text-align: center;
 }
-.plant-container{ 
-    text-align: center;
-    margin: 60px auto;
 
-}
 .plant-container h1 {
     margin-bottom: 15px;
     font-size: 50px;
@@ -104,6 +102,20 @@ font-size: 22px;
 font-weight: bold;
 font-size: 22px;
 margin-bottom: 10px;
+}
+.plant-card button, a{
+    width: 100%;
+    align-items: center;
+    background: #ff6a00;
+    color: white;
+    border: none;
+    padding: 10px 10px;
+    font-size: 16px;
+    cursor: pointer;
+    text-decoration: none;
+}
+.plant-card  a:hover {
+  color: #000000;
 }
 
 
