--- a/style.css
+++ b/style.css
@@ -127,19 +127,26 @@ body {
 }
 .plant-lover-container{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 60px;
     max-width: 1100px;
     margin: 60px auto;
 }
 .lover-img{
-    width: 70%;
+    width: 60%;
     position: relative;
 
 }
 .lover-img img{
     display: block;
     width: 100%;
+}
+.trusted-badge{
+    position: absolute;
+    top: -100px;
+    right: -20%;
+    width: 250px;
+
 }
 .lover-content{
     width: 60%;
