--- a/style.css
+++ b/style.css
@@ -162,5 +162,21 @@ body {
     color: #777;
     line-height: 1.7;
 }
-
-
+.latest-deal{
+    text-align: center;
+    padding: 50px 0;
+     gap: 30px;
+    max-width: 1100px;
+    margin: 60px auto;
+}
+.latest-deal h1{
+    font-size: 50px;
+    color: #000;
+}
+.latest-deal span{
+    color:#E95A08 ;
+}
+.latest-deal p{
+    font-size: 22px;
+    color: #777;
+}
