--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ body {
      gap: 30px;
     max-width: 1100px;
     margin: 60px auto;
+    
 }
 .latest-deal h1{
     font-size: 50px;
@@ -180,3 +181,51 @@ body {
     font-size: 22px;
     color: #777;
 }
+.deal-grid-container{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 25px;
+    margin-top: 60px;
+}
+.left-small-grid{
+    display: grid;
+    gap: 25px;
+    
+}
+.right-big-grid h2{
+    font-size: 40px;
+    
+}
+
+.deal-card {
+    position: relative;
+    overflow: hidden;
+}
+.deal-card img {
+    width: 100%;
+    height: 95%;
+    display: block;
+    object-fit: cover;
+    border-radius: 25px;
+}
+.deal-overlay{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    inset: 0;
+    font-size: 18px;
+
+}
+.deal-overlay span {
+    color: #fff;
+    margin-top: 5px;
+    font-size: 25px;
+}
+.deal-overlay p {
+    margin-bottom: 0%;   
+    font-weight: bold; 
+}
+
