--- a/style.css
+++ b/style.css
@@ -271,3 +271,53 @@ body {
     font-size: 16px ;
 
 }
+.footer-section{
+    display: grid;
+    grid-template-columns: 1.5fr repeat(3, 1fr);
+    justify-content: space-between;
+    gap: 40px;
+    align-items: start;
+    
+    padding: 60px 20px;
+    font-size: 15px;
+    max-width: 1100px;
+    margin: 60px auto;
+}
+.sibralogo-footer{
+    width: 250px;
+    height: 100%;
+    display: block;
+    margin-top: -40px;
+
+}
+.footer-grid{
+    column-gap: 10px;
+}
+.footer-grid p{
+    font-size: 14px;
+    margin-top: -30px;
+    color: #777;
+}
+
+.footer-links{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;    
+    color: #777;
+    font-size: 16px;
+    gap: 5px;
+    margin-top: 25px;
+    cursor: pointer;
+}
+.social-media img{
+    display: inline-block;
+    justify-content: flex-start;
+    width: 28px;
+    height: 28px;
+    cursor: pointer;
+    margin-right: 20px;
+    margin-top: 35px;
+    font-weight: bold;
+    border-radius: 50%;
+    padding-top: 0px;
+}
