newsletter section media query added

--- a/style.css
+++ b/style.css
@@ -393,7 +393,7 @@ body {
 }
     .plant-lover-container {
     flex-direction: column;
-    gap: 30px;
+    gap: 10px;
     margin-left: 25px;
     margin-right: 25px ;
   }
@@ -424,6 +424,82 @@ body {
     line-height: 1.6;
     padding-left: 18px;
     align-items: center;
+  }
+
+   .latest-deal {
+    margin: 20px 20px ;
+    align-items: center;
+    
+  }
+  .latest-deal h1 {
+    font-size: 30px;
+    font-weight: bold;
+  }
+    .latest-deal h2 {
+    font-size: 30px;
+    font-weight: bold;
+  }
+
+  .latest-deal p {
+    font-size: 15px;
+    padding: 0 10px;
+    
+  }
+
+  .deal-grid-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .deal-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 16px;
+  }
+
+  .deal-overlay p {
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .deal-overlay span {
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+
+  .newsletter-content h2{
+    font-size: 22px;
+    font-weight: bold;
+  }
+ .newsletter-form {6
+    width: 100%;
+    margin: 0 auto;
+    border-radius: 6px;
+    overflow: hidden;
+    background: #fff;
+  }
+
+
+  .newsletter-form input {
+   
+    border: none;
+    padding: 18px 24px;
+    font-size: 15px;
+    outline: none;
+  }
+
+  .newsletter-form button {
+    border: none;
+    background-color: #E95A08;
+    color: #fff;
+    padding: 0 18px;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    
   }
 
 }
