--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     margin-left: 20px;
     
 }
-.menu a, .active {
+.menu a, .active, .cart {
     color: #222020;
     font-weight: bold;
 }
@@ -54,6 +54,9 @@ body {
     font-size: 45px; 
 
 }
+.hero-container p{
+
+}
 .hero-container .black {
     color: #000;
 }
@@ -64,7 +67,7 @@ body {
     color: #777;
 }
 .hero-image {
-    width: 50%;
+    width: 100%;
     text-align: right;
 }
 
@@ -329,7 +332,23 @@ body {
 
 
 @media screen and (max-width: 768px) {
-    
+      .nav-bar {
+        margin: 20px auto;
+        padding: 10px 16px;
+    }
+       .menu-bar a:not(.cart) {
+        display: none;
+    }
+    .cart {
+        display: flex;
+        align-items: center;
+        font-size: 18px;
+        color: #000;
+        font-weight: bold;
+        margin-left: auto;
+        gap: 6px;
+    }
+
     .hero-section {
         flex-direction: column-reverse;
         text-align: left;
@@ -375,7 +394,7 @@ body {
         
     }
     .plant-container h1 {
-        font-size: 20px;
+        font-size: 30px;
     }
 
     .plant-card h3 {
@@ -474,7 +493,8 @@ body {
     font-size: 22px;
     font-weight: bold;
   }
- .newsletter-form {6
+ .newsletter-form {
+    flex: content;
     width: 100%;
     margin: 0 auto;
     border-radius: 6px;
@@ -484,7 +504,7 @@ body {
 
 
   .newsletter-form input {
-   
+    
     border: none;
     padding: 18px 24px;
     font-size: 15px;
@@ -500,6 +520,40 @@ body {
     font-weight: bold;
     cursor: pointer;
     
+    
   }
+
+  .footer-section {
+    grid-template-columns: 1fr;
+    text-align: left;
+    padding: 40px 20px;
+    gap: 20px;
+    margin-left: 10px;
+  }
+  .sibralogo-footer {
+    width: 160px;
+    
+  }
+
+  .footer-grid p {
+    font-size: 14px;
+    line-height: 1.5;
+    margin: 0;
+  }
+  .footer-links {
+    gap: 10px;
+    margin-top: 10px;
+    font-size: 15px;
+  }
+  .social-media {
+    margin-top: 10px;
+  }
+
+  .social-media img {
+    width: 26px;
+    height: 26px;
+    margin-right: 14px;
+  }
+
 
 }
